tests/errors/first_stage/operation/invalid_label_name/invalid_label_name.as
; label name in operand has an invalid name
mystr: .string "hi"
prn m$str[2]